--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,11 @@
 <p>admin works!</p>
 
+<h3>User List</h3>
+
+<ul *ngFor="let user of Users">
+    <li>{{user._id}}</li>
+    <li>{{user.user_name}}</li>
+
+</ul>
+
 <button class="btn btn-outline-danger" (click)="logout()">Logout</button>
